--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
+    "humanize-duration": "^3.33.0",
+    "rc-progress": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-simple-star-rating": "^5.1.7",
     "react-youtube": "^10.1.0",
+    "tailwindcss": "^4.1.8",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
