--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.32.0",
     "@tailwindcss/vite": "^4.1.8",
     "humanize-duration": "^3.33.0",
     "rc-progress": "^4.0.0",
