--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.32.0",
     "@tailwindcss/vite": "^4.1.8",
     "humanize-duration": "^3.33.0",
+    "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
